--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,22 @@
 		"@typescript-eslint"
 	],
 	"rules": {
+		"no-use-before-define": "off",
+		"@typescript-eslint/no-use-before-define": "off",
+		"jsx-a11y/click-events-have-key-events": "off",
+		"jsx-a11y/no-static-element-interactions": "off",
+		"react/no-array-index-key": "off",
+		"max-len": 0,
+		"react/function-component-definition": [
+			2,
+			{
+				"named-components": "arrow-function"
+			}
+		],
 		"react/jsx-props-no-spreading": "off",
 		"react/react-in-jsx-scope": "off",
+		"react/jsx-no-useless-fragment": "off",
+		"import/prefer-default-export": 0,
 		"semi": "off",
 		"@typescript-eslint/semi": [
 			"warn"
@@ -23,7 +37,8 @@
 		"airbnb-typescript",
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@typescript-eslint/recommended",
+		"plugin:react-hooks/recommended"
 	],
 	"parserOptions": {
 		"project": "./tsconfig.json"
