--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "stylelint": "stylelint \"**/*.css\" --fix"
     },
     "dependencies": {
+        "classnames": "^2.3.1",
         "next": "12.1.6",
-        "react": "18.1.0",
-        "react-dom": "18.1.0"
+        "react": "^17.0.2",
+        "react-dom": "17.0.2"
     },
     "devDependencies": {
+        "@svgr/webpack": "^6.2.1",
+        "@types/classnames": "^2.3.1",
         "@types/node": "^17.0.39",
-        "@types/react": "^18.0.11",
+        "@types/react": "^17.0.45",
         "@typescript-eslint/eslint-plugin": "^5.27.0",
         "@typescript-eslint/parser": "^5.27.0",
         "cross-env": "^7.0.3",
@@ -27,7 +30,7 @@
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-react-hooks": "^4.5.0",
         "stylelint": "^14.8.5",
         "stylelint-config-standard": "^25.0.0",
         "stylelint-order": "^5.0.0",
