--- a/.eslintrc
+++ b/.eslintrc
@@ -6,14 +6,23 @@
 	],
 	"rules": {
 		"no-use-before-define": "off",
+		"no-underscore-dangle": "off",
+		"react/jsx-no-constructed-context-values": "off",
 		"@typescript-eslint/no-use-before-define": "off",
 		"jsx-a11y/click-events-have-key-events": "off",
 		"jsx-a11y/no-static-element-interactions": "off",
+		"jsx-a11y/role-supports-aria-props": "off",
+		"no-param-reassign": "off",
+		"react/no-unused-prop-types": "off",
+		"no-restricted-syntax": "off",
+		"jsx-a11y/anchor-is-valid": "off",
 		"react/no-array-index-key": "off",
+		"no-await-in-loop": "off",
 		"max-len": 0,
 		"react/function-component-definition": [
 			2,
 			{
+				
 				"named-components": "arrow-function"
 			}
 		],
