--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "prepare": "husky install",
         "dev": "next dev",
         "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
         "build": "next build",
@@ -10,10 +11,15 @@
         "stylelint": "stylelint \"**/*.css\" --fix"
     },
     "dependencies": {
+        "axios": "^0.27.2",
         "classnames": "^2.3.1",
+        "date-fns": "^2.28.0",
+        "framer-motion": "^6.3.16",
         "next": "12.1.6",
         "react": "^17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-hook-form": "^7.32.2",
+        "react-yandex-metrika": "^2.6.0"
     },
     "devDependencies": {
         "@svgr/webpack": "^6.2.1",
@@ -31,6 +37,7 @@
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.5.0",
+        "husky": "^8.0.1",
         "stylelint": "^14.8.5",
         "stylelint-config-standard": "^25.0.0",
         "stylelint-order": "^5.0.0",
