--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "date-fns": "^2.28.0",
         "framer-motion": "^6.3.16",
         "next": "12.1.6",
+        "prettier": "^2.7.1",
         "react": "^17.0.2",
         "react-dom": "17.0.2",
         "react-hook-form": "^7.32.2",
@@ -33,12 +34,15 @@
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-next": "12.1.6",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.5.0",
         "husky": "^8.0.1",
         "stylelint": "^14.8.5",
+        "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-standard": "^25.0.0",
         "stylelint-order": "^5.0.0",
         "stylelint-order-config-standard": "^0.1.3",
